# cdp-agentkit

./: .gitignore  ABOUT.md  CONTRIBUTING-PYTHON.md  CONTRIBUTING-TYPESCRIPT.md  CONTRIBUTING.md  Makefile  README.md  blocks.py  crew.sh  manager.py  package-lock.json  package.json  processblock.py  pyproject.toml  requirements.txt  truffle-config.js  tsconfig.base.json
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING-PYTHON.md  CONTRIBUTING-TYPESCRIPT.md  WISHLIST.md  pull_request_template.md
.github/workflows/: checkmarx.yml  codeql.yml  publish_agentkit.yml  publish_docs.yml  publish_langchain.yml  publish_package.yml  publish_pypi_cdp_agentkit_core.yml  unit_tests.yml
cdp-agentkit-core/: CHANGELOG.md  Makefile  README.md
cdp-agentkit-core/cdp_agentkit_core/: __init__.py
cdp-agentkit-core/cdp_agentkit_core/actions/: __init__.py  transfer.py
cdp-agentkit-core/docs/: README.md  cdp_agentkit_core.actions.social.warpcast.rst  conf.py  index.rst
cdp-agentkit-core/python/: CHANGELOG.md  pyproject.toml
cdp-agentkit-core/tests/actions/: test_transfer.py
cdp-agentkit-core/typescript/: CHANGELOG.md  package-lock.json  package.json
cdp-agentkit-core/typescript/docs/: hierarchy.html  modules.html
cdp-agentkit-core/typescript/src/: allora_agentkit.ts  farcaster_agentkit.ts
cdp-langchain/: CHANGELOG.md  Makefile  README.md
cdp-langchain/cdp_langchain/: __init__.py
cdp-langchain/cdp_langchain/agent_toolkits/: cdp_toolkit.py
cdp-langchain/docs/: README.md  conf.py
cdp-langchain/examples/chatbot/: README.md  chatbot.py
cdp-langchain/examples/chatbot-python/: README.md  pyproject.toml
cdp-langchain/examples/chatbot-typescript/: .env.example  README.md  chatbot.ts  package-lock.json  package.json
cdp-langchain/examples/farcaster-typescript/: README.md
cdp-langchain/examples/morpho-python/: README.md  __init__.py  morpho-market-flow.py  morpho_base_mainnet_wallet_data.txt  pyproject.toml  specific-action-flow.py
cdp-langchain/python/: CHANGELOG.md  pyproject.toml
cdp-langchain/tests/utils/: test_cdp_agentkit_wrapper.py
cdp-langchain/typescript/: CHANGELOG.md  package-lock.json  package.json
docs/: README-cdp-agentkit-core.md  README-cdp-langchain.md  cdp-agentkit-core.rst  cdp-langchain.rst  conf.py  index.rst
farcaster-langchain/: Makefile  README.md  pyproject.toml
farcaster-langchain/docs/: README.md  conf.py  farcaster_langchain.rst  index.rst  modules.rst
farcaster-langchain/examples/chatbot/: README.md  chatbot.py  pyproject.toml
farcaster-langchain/examples/chatbot-typescript/: README.md  package-lock.json  package.json
farcaster-langchain/farcaster_langchain/: __init__.py  farcaster_api_wrapper.py  farcaster_tool.py  farcaster_toolkit.py
farcaster-langchain/tests/: conftest.py
farcaster-langchain/tests/actions/: test_cast.py  test_notifications.py  test_user_details.py
farcaster-langchain/tests/factories/: farcaster_api_wrapper_factory.py
farcaster-langchain/typescript/: CHANGELOG.md  README.md  package-lock.json  package.json
farcaster-langchain/typescript/src/: farcaster_tool.ts  farcaster_toolkit.ts
farcaster-langchain/typescript/src/tests/: farcaster_toolkit_test.ts
flippando-langchain/: README.md  package-lock.json  package.json  tsconfig.json
flippando-langchain/src/: actions.ts  agent.ts  flippando-agent.ts  flippando-agentkit.ts  index.ts  test-flippando-agent.ts  types.ts
flippando-langchain/src/__tests__/: game-player.test.ts
flippando-langchain/src/actions/: flippando.ts
flippando-langchain/src/modules/: art-advisor.ts  game-player.ts  index.ts  social-poster.ts  token-tracker.ts
flippando-langchain/src/tools/: flippando-tool.ts  flippando-toolkit.ts  flippando_tool.ts  flippando_toolkit.ts
flippando-langchain/src/utils/: tileImages.ts
python/cdp-agentkit-core/: CHANGELOG.md  pyproject.toml
python/cdp-crewai/: CHANGELOG.md  Makefile  README.md  pyproject.toml
python/cdp-crewai/cdp_crewai/: __init__.py  constants.py
python/cdp-crewai/cdp_crewai/agent_toolkits/: __init__.py  cdp_toolkit.py
python/cdp-crewai/cdp_crewai/tools/: __init__.py  cdp_tool.py
python/cdp-crewai/cdp_crewai/utils/: __init__.py  cdp_agentkit_wrapper.py
python/cdp-crewai/tests/tools/: test_cdp_tool.py
python/cdp-crewai/tests/utils/: test_cdp_agentkit_wrapper.py
python/cdp-langchain/: pyproject.toml
python/cdp-langchain/docs/: cerebras_integration.md  fireworks_integration.md  groq_integration.md
python/claude-mcp/: requirements.txt
python/claude-mcp/src/: claude_server.py
python/coinbase-agentkit/: CHANGELOG.md  Makefile  README.md  pyproject.toml  pyth_price_example.py
python/coinbase-agentkit/coinbase_agentkit/: __init__.py  agentkit.py
python/examples/cdp-crewai-chatbot/: chatbot.py  pyproject.toml
python/examples/cdp-langchain-chatbot/: pyproject.toml
python/examples/cdp-langchain-chatbot-with-gaia/: .env.local  Makefile  README.md  chatbot.py
python/examples/dalle-nft-chatbot/: Makefile  README.md  chatbot.py  pyproject.toml
python/examples/dalle-nft-chatbot/tools/: __init__.py  dalle_nft_tool.py
scripts/: docs.sh
tests/: test_wallet_issue.py
twitter-langchain/: Makefile  README.md  pyproject.toml
twitter-langchain/examples/chatbot/: .env-local  Makefile  README.md  chatbot.py  pyproject.toml
twitter-langchain/twitter_langchain/: __init__.py  twitter_action.py  twitter_api_wrapper.py  twitter_toolkit.py
twitter-langchain/typescript/: package-lock.json  package.json
typescript/: package-lock.json  package.json  tsconfig.json
typescript/agentkit/: CHANGELOG.md  README.md  package-lock.json  package.json
typescript/cdp-agentkit-core/: jest.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
typescript/cdp-langchain/: README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
warpcast-langchain/: Makefile  README.md  pyproject.toml  warpcast_api_wrapper.py  warpcast_toolkit.py
warpcast-langchain/examples/: basic_test.py
warpcast-langchain/warpcast_langchain/: __init__.py  warpcast_api_wrapper.py  warpcast_tool.py  warpcast_toolkit.py
(+610 files in other folders)
