[tool.poetry]
name = "ethkey-protocol"
version = "0.1.0"
description = "Smart contracts for the ETHkey protocol"
authors = ["Setland34 <setland34@example.com>"]
readme = "README.md"
license = "MIT"
keywords = ["ethereum", "smart contracts", "ethkey"]
packages = [{ include = "ethkey_protocol" }]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^5.24.0"
ethers = "^5.7.2"
truffle = "^5.11.5"
ganache-cli = "^6.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
sphinx = "^4.2.0"
sphinx-autobuild = "^2021.3.14"
sphinxcontrib-napoleon = "^0.7"
sphinx-autodoc-typehints = "^1.12.0"
myst-parser = "^0.15.2"
ruff = "^0.7.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["./build/**", "./dist/**", "./docs/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["D213", "D203", "D100", "D104", "D107", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["ethkey_protocol"]
