[tool.poetry]
name = "warpcast-langchain"
version = "0.0.1"
description = "Warpcast integration for CDP Agentkit"
authors = ["lausuarez02 <lausuarez02@example.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["coinbase", "sdk", "crypto", "cdp", "agentkit", "ai", "agent", "warpcast"]
packages = [{ include = "warpcast_langchain" }]

[tool.poetry.dependencies]
python = "^3.10"
warpcast-api-client = "^1.0.0"
cdp-agentkit-core = "^0.0.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
python-lsp-server = "^1.12.0"
ruff-lsp = "^0.0.58"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
sphinx = "^8.0.2"
sphinx-autobuild = "^2024.9.19"
sphinxcontrib-napoleon = "^0.7"
sphinx-autodoc-typehints = "^2.4.4"
myst-parser = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["./build/**", "./dist/**", "./docs/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["D213", "D203", "D100", "D104", "D107", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["warpcast_langchain", "cdp_agentkit_core", "cdp"]
