[tool.poetry]
name = "cdp-dalle-nft-agent"
version = "0.1.0"
description = "A sample app that uses CDP AgentKit and implements a tool to work with the create dalle_nft.py Tool - generates image from dalle, hosts image & metadata on IPFS, deploys & mints nft to users wallet"
authors = ["Kieran Williams - kieranmarcus@gmail.com", "Sethu Pavan - sethupavan12@gmail.com", "Bilal Mustafa Sheikh - bilalmustafasheikh@icloud.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cdp-langchain = "^0.0.8"
cdp-agentkit-core = "^0.0.6"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.6"
langgraph = "^0.2.45"
pydantic = "^2.9.2"
cdp-sdk = "^0.12.0"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
